# opengl-renderer-3d

./: CMakeLists.txt  README.md  main.cpp
DisplayManager/: DisplayManager.cpp  DisplayManager.h
InputManager/: InputManager.cpp  InputManager.h
Renderer/: Material.h  Mesh.cpp  Mesh.h  MeshGroup.h  Model.h  Shader.h  Texture.h
